[gd_scene load_steps=2 format=3 uid="uid://cepuwufijvlgd"]

[ext_resource type="Script" path="res://Scripts/Inventory/AmmoSource.gd" id="2"]

[node name="AmmoSource" type="Node2D"]
script = ExtResource("2")

[node name="Cooldown" type="Timer" parent="."]

[node name="DropAreaRect" type="Node2D" parent="."]
position = Vector2(88, 8)

[connection signal="timeout" from="Cooldown" to="." method="_on_Timer_timeout"]
